--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CHANGE THIS</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   {{{body}}}
+  <script src="/js/logout.js"></script>
 </body>
 
 </html>
