Got login/logout routes to function successfully. Got Dashboard button to function successfully. Began working on functions/routes to post a new blog

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,10 +1,10 @@
 <nav>
 	<a id="home" href="/">HOME</a>
 	<br>
+	<a id="dashboard" href="/dashboard">DASHBOARD</a>
 	{{#if logged_in}}
 	<a id="logout" href="#">LOG OUT</a>
 	<br>
-	
 	{{else}}
 	<a id="login" href="/login">LOG IN</a>
 	<br>
