Got the new blog form page to render and all of it's routes working successfully. Working on Getting the blog add form routes to work

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 {{> nav}}
 
-<a id="addBlogPost" href="/blogAdd">Add New Post</a>
+<a id="addNewBlogBtn" href="/blogAdd">Add New Post</a>
 
 
 <script src="/public/js/blogAdd.js"></script>
