--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,3 +5,18 @@
     <p>Welcome back {{name}}</p>
     {{/if}}
 </div>
+
+{{#if blogContent.[0].id}}
+<div class="card">
+    <ul class="card-body">
+        {{#each blogContent}}
+        <li>
+            <h2>{{this.title}}</h2>
+            <p>{{this.content}}</p>
+        </li>
+        {{/each}}
+    </ul>
+</div>
+{{else}}
+<h2>There are no blog posts at this time. Check back in for new postings!</h2>
+{{/if}}
