--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,6 +13,7 @@
         <li>
             <h2>{{this.title}}</h2>
             <p>{{this.content}}</p>
+            <p>Posted by {{this.user.name}} on {{format_date this.date}}</p>
         </li>
         {{/each}}
     </ul>
