--- a/views/editBlog.handlebars
+++ b/views/editBlog.handlebars
@@ -3,7 +3,7 @@
     <h2>Edit Post</h2>
   </div>
   <form id="edit-post-form" class="card-body">
-    <input type="hidden" name="post-id" value="{{id}}" />
+    <input type="hidden" name="post-id" value="{{blogEdit.[0].id}}" />
 
     <label class="form-label" for="post-title">Title</label>
     <input type="text" name="post-title" value="{{blogEdit.[0].title}}" class="form-input" />
@@ -17,4 +17,4 @@
   </form>
 </div>
 
-{{!-- <script src="/js/edit.js"></script> --}}
+<script src="/js/edit.js"></script>
