--- a/views/blogAdd.handlebars
+++ b/views/blogAdd.handlebars
@@ -1,17 +1,23 @@
 {{> nav}}
-
-<form class="card blogAdd">
-  <div class="form-group">
-    <label for="formGroupExampleInput">Example label</label>
-    <input type="text" class="form-control title" id="formGroupExampleInput" placeholder="Example input">
+<div class="d-flex justify-content-center mt-5">
+<div class="card w-75">
+  <div class="card-header text-light bg-success">
+<h2>Add a Blog:</h2>
   </div>
+<form class="blogAdd ms-3 me-3">
+  <div>
   <div class="form-group">
-    <label for="formGroupExampleInput2">Another label</label>
-    <input type="text" class="form-control content" id="formGroupExampleInput2" placeholder="Another input">
+    <label class="fs-4 mt-3" for="formGroupExampleInput">Title:</label>
+    <input type="text" class="form-control title" id="formGroupExampleInput" placeholder="Blog title goes here...">
   </div>
-  <button type="submit" class="btn btn-primary">Create</button>
+  <div class="form-group mt-4">
+    <label class="fs-4" for="formGroupExampleInput2">Content:</label>
+    <input type="text" class="form-control content" id="formGroupExampleInput2" placeholder="Blog text goes here...">
+  </div>
+  <button type="submit" class="btn btn-warning text-light mt-4 mb-3 w-100">Create</button>
+  </div>
 </form>
-
-
+</div>
+</div>
 
 <script src="/js/blogAdd.js"></script>
