--- a/views/blogComments.handlebars
+++ b/views/blogComments.handlebars
@@ -1,52 +1,36 @@
+{{> nav}}
+
 <div class="post">
-  <article class="card">
-    <div class="card-header flex-row justify-space-between">
-      <h2>{{blogComment.[0].title}}</h2>
-      <div>
+<div class="d-flex justify-content-center">
+    <article class="card w-75">
+    <div class="card-header d-flex flex-row justify-content-between bg-warning">
+      <h2 class="text-light">{{blogComment.[0].title}}</h2>
+      <div class="text-end text-light">
         Posted by {{blogComment.[0].user.name}} on {{format_date blogComment.[0].date}}
       </div>
     </div>
-    <div class="card-body">
+    <div class="card-body fs-4">
       {{blogComment.[0].content}}
     </div>
   </article>
+</div>
 
-  {{!-- {{#if blogComment.[0]}} --}}
-    <section class="card">
-      <div class="card-header">
-        <h3>Comments</h3>
-      </div>
 
-      <div class="card-body">
-        {{!-- {{#each post.Comments}} --}}
-          <div>
-            <p>
-              {{!-- {{body}} --}}
-            </p>
-            <p>
-              {{!-- &mdash; {{User.username}}, {{format_date createdAt}} --}}
-            </p>
-          </div>
-        {{!-- {{/each}} --}}
-      </div>
-    </section>
-  {{!-- {{/if}} --}}
-
-  <form id="new-comment-form" class="card">
-    <div class="card-header">
-      <h3>Add New Comment</h3>
+  <form id="new-comment-form" class="card mt-5 me-3 ms-3 w-25">
+    <div class="card-header text-light bg-success">
+      <h3 class="fs-6">Add New Comment</h3>
     </div>
 
-    {{!-- <div class="card-body">
-      <input type="hidden" name="post-id" value="{{post.id}}" />
+    <div class="card-body d-flex flex-column">
+      <input type="hidden" name="post-id" value="{{blogComment.[0].id}}" />
 
-      <label class="form-label" for="comment-body">Comment</label>
+      <label class="form-label fs-6" for="comment-body">Comment:</label>
 
-      <textarea name="comment-body" class="form-input"></textarea>
+      <textarea name="comment-body" class="form-input rounded border border-secondary-subtle"></textarea>
 
-      <button type="submit" class="btn">Submit</button>
+      <button type="submit" class="btn btn-warning text-light mt-2">Submit</button>
     </div>
   </form>
-</div> --}}
+</div>
 
-{{!-- <script src="/js/comment.js"></script> --}}
+<script src="/js/comment.js"></script>
