--- a/views/editBlog.handlebars
+++ b/views/editBlog.handlebars
@@ -1,20 +1,22 @@
-<div class="post card">
-  <div class="card-header">
-    <h2>Edit Post</h2>
+{{> nav}}
+<div class="d-flex justify-content-center">
+<div class="post card w-75 mt-5">
+  <div class="card-header bg-success text-light">
+<h2>Edit Blog:</h2>
   </div>
-  <form id="edit-post-form" class="card-body">
+  <form id="edit-post-form" class="card-body d-flex flex-column">
     <input type="hidden" name="post-id" value="{{blogEdit.[0].id}}" />
 
-    <label class="form-label" for="post-title">Title</label>
-    <input type="text" name="post-title" value="{{blogEdit.[0].title}}" class="form-input" />
+    <label class="form-label fs-4" for="post-title">Title:</label>
+    <input type="text" name="post-title" value="{{blogEdit.[0].title}}" class="form-input rounded border border-secondary-subtle"/>
 
-    <label class="form-label" for="post-body">Content</label>
-    <textarea name="post-body" class="form-input">{{blogEdit.[0].content}}</textarea>
+    <label class="form-label fs-4 mt-3" for="post-body">Content:</label>
+    <textarea name="post-body" class="form-input rounded border border-secondary-subtle">{{blogEdit.[0].content}}</textarea>
 
-    <button type="submit" class="btn">Update</button>
+    <button type="submit" class="btn btn-warning text-light mt-3">Update</button>
 
-    <button type="button" id="delete-btn" class="btn">Delete</button>
+    <button type="button" id="delete-btn" class="btn btn-warning text-light mt-2">Delete</button>
   </form>
 </div>
-
+</div>
 <script src="/js/edit.js"></script>
