--- a/views/blogComments.handlebars
+++ b/views/blogComments.handlebars
@@ -2,7 +2,7 @@
 
 <div class="post">
   <div class="d-flex justify-content-center">
-    <article class="card w-75">
+    <article class="card w-75 mt-3">
       <div class="card-header d-flex flex-row justify-content-between bg-warning">
         <h2 class="text-light">{{blogComment.[0].title}}</h2>
         <div class="text-end text-light">
@@ -15,28 +15,30 @@
     </article>
   </div>
 
-  {{!-- {{#if blogComment.[0].Comments.[0]}}
-    <section class="card">
-      <div class="card-header">
-        <h3>Comments</h3>
-      </div>
+<div class="d-flex justify-content-start ms-3 mt-4">
+  {{#if blogComment.[0].Comments}}
+  <section class="card w-75">
+    <div class="card-header bg-danger text-light">
+      <h3>Comments</h3>
+    </div>
 
-      <div class="card-body">
-        {{#each blogComment.[0].Comments}}
-          <div>
-            <p>
-              {{this.body}}
-            </p>
-            <p>
-              &mdash; {{BlogComment.[0].}}, {{format_date createdAt}}
-            </p>
-          </div>
-        {{/each}}
+    <div>
+      {{#each blogComment.[0].Comments}}
+      <div class="card mt-3">
+        <p class="card-body fs-4">
+          {{this.body}}
+        </p>
+        <p class="card-body fs-5">
+          &mdash; {{this.user.name}} ({{format_date createdAt}})
+        </p>
       </div>
-    </section>
-  {{/if}} --}}
+      {{/each}}
+    </div>
+  </section>
+  {{/if}}
+</div>
 
-  <form id="new-comment-form" class="card mt-5 me-3 ms-3 w-25">
+  <form id="new-comment-form" class="card mt-3 me-3 ms-3 mb-3 w-25">
     <div class="card-header text-light bg-success">
       <h3 class="fs-6">Add New Comment</h3>
     </div>
