--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,9 +7,9 @@
 
 {{#if blogContent.[0].id}}
 {{#each blogContent}}
-<div class="mt-5">
+<div class="mt-4">
     <ul class="d-flex justify-content-center" style="height: 300px;">
-        <li class="card me-3 w-75 h-75 boarder position-relative">
+        <li class="card me-3 w-75 h-75 position-relative">
             <div class="card-header bg-warning">
                 <h2>
                     <a class="get text-light ms-4 d-inline" href="/comment/{{this.id}}">{{this.title}}</a>
